# ssm

./: .gitignore  CMakeLists.txt  finances.ods
data/: CH0000816824.csv  CH0001307757.csv  CH0001319265.csv  CH0001340204.csv  CH0001341608.csv  CH0001473559.csv  CH0001503199.csv  CH0001624714.csv  CH0001625810.csv  CH0002088976.csv  CH0002178181.csv  CH0002187810.csv  CH0002271010.csv  CH0002277314.csv  CH0002361068.csv  CH0002432174.csv  CH0002609656.csv  CH0002619481.csv  CH0002661731.csv  CH0003245351.csv  CH0003390066.csv  CH0003420806.csv  CH0003541510.csv  CH0003583256.csv  CH0003671440.csv  CH0005059438.csv  CH0005092751.csv  CH0005319162.csv  CH0005795668.csv  CH0006089921.csv  CH0006326851.csv  CH0006372897.csv  CH0007162958.csv  CH0008012236.csv  CH0008038389.csv  CH0008207356.csv  CH0008531045.csv  CH0008702190.csv  CH0008837566.csv  CH0008967926.csv  (+165 more)
finance_yahoo_crawler/: CMakeLists.txt  crawler.py
finance_yahoo_crawler/data/: ABBNE.SW.csv  db
finance_yahoo_crawler/include/: csv_parser.h  data.h  db.h  download.h  valor.h
finance_yahoo_crawler/include/references/: six_stock_references.h
finance_yahoo_crawler/references/: mid_and_small_caps_swiss_shares_reference_data.csv
finance_yahoo_crawler/src/: csv_parser.c  data.c  db.c  download.c  main.c  valor.c
finance_yahoo_crawler/src/references/: six_stock_references.c
include/: csv_parser.h  data.h  db.h  download.h  macro.h  supervisor.h
references/: mid_and_small_caps_swiss_shares_reference_data.csv  swiss_blue_chip_shares_reference_data.csv
six_historical_prices_crawler/: main.py  (+2 more)
(+462 files in other folders)
